@startuml
'https://plantuml.com/class-diagram

skinparam classAttributeIconSize 0

class Ship {
-mmsiCode
-name
-imoCode
-numberEnergyGenerators
-generatorPower
-callSign
-vesselType
-length
-width
-capacity
-draft
--
-getMMSI()
-getName()
-getShipId()
-getEnergyGenerators()
-getCallSign()
-getVesselType()
-getLength()
-getWidth()
-getCapacity()
-getDraft()
}


class BstShip {
-getShipByMmsiCode(mmsiCode)
-getShipByIMO(imoCode)
-getShipByCallSign(callSign)

}


class SearchDetailsUI {}

class SearchDetailsController {
-shipExist(mmsiCode)
-getShipDetails()
}

class Company {
-designation
-getBstShip()
}

class SearchDetailsMapper{
-shipDetailsToDto()
}

class ShipDetailsDto{
-mmsiCode
-name
-imoCode
-numberEnergyGenerators
-generatorPower
-callSign
-vesselType
-length
-width
-capacity
-draft
}



Company "1" -- "1" BstShip : uses >

SearchDetailsUI ..> SearchDetailsController
SearchDetailsUI ..> ShipDetailsDto

SearchDetailsController ..> Company
SearchDetailsController ..> BstShip
SearchDetailsController ..> Ship
SearchDetailsController ..> SearchDetailsMapper
SearchDetailsController ..> ShipDetailsDto


SearchDetailsMapper ..> Ship



@enduml